# newJob-backend

./: .editorconfig  .env.sample  .flake8  .gitignore  .pdm-python  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
backend/: settings.py  urls.py
backend/core/: admin.py  apps.py  authentication.py  router.py
backend/core/auth/: __inti__.py  forgot_password.py  login.py  register.py  reset_password.py
backend/core/migrations/: 0001_initial.py  0002_company.py  0003_auto_20210219_1631.py  0004_user_public_id.py  0005_auto_20210219_1652.py  0006_auto_20210219_1655.py  0007_auto_20210224_1526.py  0007_auto_20210413_1426.py  0008_merge_20210414_1727.py  0009_auto_20210419_1412.py  0010_auto_20211103_1234.py  0011_auto_20211103_1241.py  0012_auto_20220129_0031.py  0013_auto_20220129_0111.py  0014_auto_20220129_0120.py  0015_auto_20220222_2014.py  0016_auto_20220223_1938.py  0017_auto_20220224_1933.py  0018_auto_20220224_1940.py  0019_auto_20220224_1943.py  0020_auto_20220224_2028.py  0021_auto_20220224_2028.py  0022_alter_company_id_alter_contracttype_id_alter_job_id_and_more.py  0022_user_jobs_alter_company_id_alter_contracttype_id_and_more.py  0023_alter_user_public_id_alter_userjob_job.py  0024_user_reset_code_alter_user_public_id.py  0025_benefit_category_alter_user_managers_and_more.py  0026_alter_user_passage_id_alter_user_username.py  0027_alter_user_passage_id_alter_user_username.py  0028_job_isexpired_alter_user_passage_id.py  0029_alter_local_latitude_alter_local_longitude_and_more.py  0030_alter_user_passage_id.py
backend/core/models/: __init__.py  benefit.py  category.py  company.py  contractType.py  job.py  local.py  state.py  user.py  userJob.py
backend/core/serializers/: __init__.py  auth.py  benefit.py  category.py  company.py  contractType.py  job.py  local.py  state.py  user.py  userJob.py
backend/core/templates/html-email/: password_reset_email.html
backend/core/views/: __init__.py  auth.py  benefit.py  category.py  company.py  contractType.py  job.py  local.py  state.py  userJob.py
backend/files/: admin.py  apps.py  router.py  views.py
backend/files/migrations/: 0001_initial.py  0002_alter_document_id_alter_image_id.py
backend/files/models/: document.py  image.py
backend/files/serializers/: document.py  image.py
tests/: conftest.py
tests/integration/auth/: test_auth.py
tests/integration/companies/: test_companies_add.py  test_companies_delete.py  test_companies_list.py  test_companies_update.py
tests/integration/contractTypes/: test_contractTypes_add.py  test_contractTypes_delete.py  test_contractTypes_list.py  test_contractTypes_update.py
tests/unit/core/: test_user_models.py
