[tool.poetry]
name = "newjob"
version = "0.1.0"
description = ""
authors = ["Eduardo da Silva <eduardo.silva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1.6"
djangorestframework = "^3.12.2"
drf-spectacular = "^0.13.1"
djangorestframework-simplejwt = "^4.6.0"
django-rest-registration = "^0.6.0"
python-magic = "^0.4.22"
Pillow = "^8.1.0"
rules = "^2.2"
django-cors-headers = "^3.7.0"
python-magic-bin = "0.4.14"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
