[project]
name = "newjob"
version = "0.2.0"
description = "Backend do projeto NewJob, desenvolvido na Fábrica de Software em parceria com o programa de pós graduação produção e sanidade animal"
authors = [
    {name = "newJob", email = "fabio.moura@ifc.edu.br"},
    {name = "Eduardo da Silva", email = "eduardo.silva@ifc.edu.br"},
]
dependencies = [
    "django>=5.0.3",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.3.1",
    "djangorestframework-simplejwt>=5.3.1",
    "setuptools>=69.2.0",
    "python-magic>=0.4.27",
    "Pillow>=10.2.0",
    "drf-spectacular>=0.27.1",
    "django-rest-registration<1.0.0,>=0.6.0",
    "rules<3.0,>=2.2",
    # "python-magic-bin==0.4.14",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "passage-identity>=2.1.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 120

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black<21.0,>=20.8b1",
    "flake8<4.0.0,>=3.8.4",
    "isort<6.0.0,>=5.8.0",
    "pre-commit<3.0.0,>=2.12.0",
    "pytest<7.0.0,>=6.2.3",
    "pytest-cov<3.0.0,>=2.11.1",
    "bandit<2.0.0,>=1.7.0",
    "pytest-django<5.0.0,>=4.2.0",
    "model-bakery<2.0.0,>=1.2.1",
]

[tool.pdm.build]
includes = []